Fixed some visibility issues

--- a/src/components/bmiList.css
+++ b/src/components/bmiList.css
@@ -1,5 +1,4 @@
 .table-box{
-    width: 30rem;
     margin: 1rem auto;
     margin-bottom: 3rem;
 }
